; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/pic/extr_pic_midrange.c_pic_midrange_get_op_info.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/pic/extr_pic_midrange.c_pic_midrange_get_op_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PIC_MIDRANGE_OPCODE_INVALID = common dso_local global i64 0, align 8
@pic_midrange_op_info = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pic_midrange_get_op_info(i64 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @PIC_MIDRANGE_OPCODE_INVALID, align 8
  %6 = icmp uge i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** @pic_midrange_op_info, align 8
  %10 = load i64, i64* %3, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  store i32* %11, i32** %2, align 8
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i32*, i32** %2, align 8
  ret i32* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
